@@ -77,3 +77,5 @@ old-style-connect/main.cpp:366:5: warning: Old Style Connect [-Wclazy-old-style-
 old-style-connect/main.cpp:372:5: warning: Old Style Connect [-Wclazy-old-style-connect]
 old-style-connect/main.cpp:372:5: warning: FixIt failed, requires manual intervention:  Fix it not implemented for disconnect with 3 args [-Wclazy-old-style-connect]
 old-style-connect/main.cpp:379:5: warning: Old Style Connect [-Wclazy-old-style-connect]
+old-style-connect/main.cpp:383:5: warning: Old Style Connect [-Wclazy-old-style-connect]
+old-style-connect/main.cpp:383:5: warning: FixIt failed, requires manual intervention:  Fix it not implemented for QMessageBox::open() [-Wclazy-old-style-connect]
